--- a/styles/resultStyles.css
+++ b/styles/resultStyles.css
@@ -30,20 +30,32 @@ body{
     width: 3rem;
 }
 
+#score_block {
+    display: flex;
+}
 #radar_chart_container {
     margin: 10px auto;
     width: 400px;
     height: 300px;
     border: 2px solid gray;
     background-color: white;
-    
 }
 
-@media (max-width: 320px) {
+#userSelection{
+    width: 40%;
+}
+
+@media (max-width: 361px) {
+    #score_block{
+        display: block;
+    }
+
     #radar_chart_container {
         margin: auto;
         width: 100%;
-        
+    }
+    #userSelection{
+        width: 100%;
     }
 }
 
@@ -56,6 +68,5 @@ body{
 
     #theme_code {
         width: calc(100% - 400px);
-        
     }
 }
