--- a/styles/resultStyles.css
+++ b/styles/resultStyles.css
@@ -1,15 +1,13 @@
 .titleBar{
-    display: flex;
+    /* display: flex; */
     background-color: #F8AB87;
+    border-radius: 5px;
+    text-align: center;
 }
 
 .titleIcon{
     margin: 0 2rem 0 1rem;
     width: 3rem;
-}
-
-.resultBlock{
-    border-bottom: 2px solid gray;
 }
 
 .code_descr_block{
@@ -18,6 +16,7 @@
     background-image: url(../images/Block.svg);
     background-repeat: no-repeat;
     background-size: 100% 100%;
+    padding: 1em;
 }
 
 .code_descr_icon{
@@ -35,6 +34,7 @@
 #scoreBlock {
     display: flex;
 }
+
 #radarChartContainer {
     margin: 10px auto;
     width: 400px;
@@ -59,5 +59,17 @@
     }
     #userSelection{
         width: 100%;
+    }
+}
+
+@media (min-width: 961px) {
+    body{
+        width: 80%;
+        max-width: 1024px;
+        margin: auto;
+    }
+
+    #theme_code {
+        width: calc(100% - 400px);
     }
 }
